@@ -1,6 +1,12 @@
+2013-07-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCClospre.hpp,
+	  src/SDCClospre.cc:
+	  Better handling of register-pressure in lospre.
+
 2013-07-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
-	* src/SDCClospre.hpp,:
+	* src/SDCClospre.hpp:
 	  Better handling of register-pressure in lospre (try not to separate calculation from use).
 
 2013-07-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
